test/distributions/robust/arithmetic/reindexing/test_reindexing6.block.good
reindex A: 0 errors
test_reindexing6.chpl:37: error: halt reached - invalid reindex for Block: distribution bounding box (low) out of range in dimension 4
